# ctfpow

./: .gitignore  README.md  pyproject.toml
src/ctfpow/: __init__.py  cli.py  pow.py
tests/: test_pow.py
