# SPDX-FileCopyrightText: 2025 Eyad Issa <eyadlorenzo@gmail.com>
#
# SPDX-License-Identifier: MIT

[project]
name = "ctfpow"
version = "0.1.0"
description = "A Python implementation of the redpwn PoW challenge"
readme = "README.md"
authors = [{ name = "VaiTon", email = "eyadlorenzo@gmail.com" }]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ctfpow = "ctfpow.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
